--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,19 +1,170 @@
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote {
+  &:before, &:after {
+    content: '';
+    content: none;
+  }
+}
+
+q {
+  &:before, &:after {
+    content: '';
+    content: none;
+  }
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
+input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
+
+/* clears the 'X' from Chrome */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+
+
 /*Common Styles For all App*/
-.wrapper-page{
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    width: 100%;
+
+.content {
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  z-index: 1;
 }
-.content{
-    margin-left: 350px;
-    padding-top: 108px;
-    width: 100%;
-    min-height: 100vh;
+
+.wrapper {
+  padding: 0 15px;
 }
-*{
-    box-sizing: border-box;
+
+* {
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
-img{
-    max-width: 100%;
+
+img {
+  max-width: 100%;
 }
+aside{
+  width: 300px;
+}
+main{
+  margin-left: 300px;
+  min-height: calc(100vh - 80px);
+  padding: 20px 10px;
+}
+.btn{
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(33, 150, 243);
+    background-color: rgba(33, 150, 243, 0);
+    display: block;
+    color: white;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    transition: background-color 0.1s linear, border-color 0.1s linear;
+    font-size: 14px;
+    &:hover{
+      background: rgb(33, 150, 243);
+    }
+    &:focus{
+      background: rgb(33, 150, 243);
+      outline: none;
+    }
+    &-back{
+        &:before{
+          position: relative;
+          left: -5px;
+          content: "\f053";
+          -webkit-font-smoothing: antialiased;
+          display: inline-block;
+          font-style: normal;
+          font-variant: normal;
+          text-rendering: auto;
+          line-height: 1;
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
+        }
+    }
+    &-show{
+      background: transparent;
+      padding: 7px 13px;
+      border: none;
+      background-color: rgba(33, 150, 243, 0);
+      background: #404359;
+      box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.9);
+      border-radius: 2px;
+      &:focus{
+        outline: none;
+      }
+      i{
+        color: white;
+        font-size: 18px;
+      }
+    }
+  &-plus{
+    &:after{
+      position: relative;
+      right: -5px;
+      content: "\f067";
+      -webkit-font-smoothing: antialiased;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      text-rendering: auto;
+      line-height: 1;
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+    }
+    &-reverse{
+      background: rgb(33, 150, 243);
+      &:hover{
+        background: white;
+        border-color: white;
+        color:rgb(33, 150, 243) ;
+      }
+    }
+  }
+}
+
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&subset=cyrillic-ext');
+
+#app{
+  font-family: 'Montserrat', sans-serif;
+  background: #2b2d3c;
+}
+
